# status-desktop

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  AppRun  AppRun-cpp  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  Entitlements.plist  I18N.md  Info.dev.plist  Info.plist  Info.runner.plist  Makefile  QtWebEngineProcess.plist  README.md  Status.entitlements  VERSION  WINDOWS_BUILD_FIXES.md  WINDOWS_DEF_FILES.md  app.status.desktop.appdata.xml  app.status.desktop.yml  build-in-docker.sh  build-linux-appimage.sh  build-linux-deb.sh  build-linux.sh  changelog.txt  conanfile.py  conanfile.txt  config.nims  docker-compose.waku.yml  docker-linux-app-image.sh  docker-linux.sh  embedded.provisionprofile  flake.nix  flatpak-wrapper.sh  fleets.json  linuxdeployqt.nix  (+32 more)
app/: CMakeLists.txt  README.md
app/qml/: CMakeLists.txt  main.qml
app/res/: CMakeLists.txt
app/src/: CMakeLists.txt  main.cpp
app/src/Application/: ApplicationController.cpp  ApplicationController.h  CMakeLists.txt  DataProvider.cpp  DataProvider.h  DbSettingsObj.cpp  DbSettingsObj.h
ci/: Dockerfile  (+32 more)
libs/ApplicationCore/: CMakeLists.txt
libs/Assets/: CMakeLists.txt
libs/ChatSection/: CMakeLists.txt
libs/ChatSection/src/: ChatDataProvider.cpp  ChatItem.cpp  ChatSectionController.cpp
libs/Core/: CMakeLists.txt
libs/Core/res/: CMakeLists.txt
libs/Helpers/: CMakeLists.txt
libs/Onboarding/: CMakeLists.txt
libs/StatusGoQt/: CMakeLists.txt
libs/StatusQ/: CMakeLists.txt
libs/Wallet/: CMakeLists.txt
new-messages-marker-poc/: AppController.qml  CMakeLists.txt  ChatController.qml  ChatInput.qml  ChatView.qml  MessagesView.qml  Model.qml  main.cpp  main.qml  qml.qrc
new-messages-marker-poc/Core/: IconButton.qml  qmldir
new-messages-marker-poc/delegates/: MessageDelegate.qml  NewMessageMarkerDelegate.qml
qt-example-app/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
resources/: CMakeLists.txt  Entitlements.plist  Entitlements_squish.plist  default-networks.json  fleets.json  fleets_cpp.json  infura_key  node-config.json  resources.qrc
src-cpp-structure/: CMakeLists.txt  CMakeSettings.json  conan-debug-profile  conan-release-profile  conanfile.py
src-cpp-structure/cmake/: app-linux.cmake  app-mac.cmake  app-win.cmake  conan.cmake  project-config.cmake  services-linux.cmake  services-mac.cmake  services-win.cmake  translation.cmake
src-cpp-structure/projects/: CMakeLists.txt
src-cpp/app/: CMakeLists.txt  app.pro
src-cpp/app_service/: CMakeLists.txt  app_service.pro  constants.cpp
src-cpp/dotherside/: CMakeLists.txt  DOtherSide.cpp  DOtherSide.h  DOtherSideSingleInstance.h  SpellChecker.cpp  SpellChecker.h  StatusSyntaxHighlighter.cpp  StatusSyntaxHighlighter.h  StatusWindow.cpp  StatusWindow.h  StatusWindow_osx.mm  StatusWindow_other.cpp  dotherside.pro
storybook/: CMakeLists.txt  PageOverlay.qml  PageOverlayPanel.qml  PagesModel.qml  README.md  StoryBook.pro  cachecleaner.cpp  cachecleaner.h  directorieswatcher.cpp  directorieswatcher.h  directoryfileswatcher.cpp  directoryfileswatcher.h  figma.json  figmadecoratormodel.cpp  figmadecoratormodel.h  figmaio.cpp  figmaio.h  figmalinks.cpp  figmalinks.h  figmalinksmodel.cpp  figmalinksmodel.h  figmalinkssource.cpp  figmalinkssource.h  main.cpp  main.qml  modelutils.cpp  modelutils.h  pagesmodel.cpp  pagesmodel.h  qml.qrc  qmlfilesserver_main.cpp  resources.qrc  sectionsdecoratormodel.cpp  sectionsdecoratormodel.h  storybook-resources.qrc  systemutils.cpp  systemutils.h  testsrunner.cpp  testsrunner.h  validator_main.cpp
storybook/Storybook/: Logs.qml  LogsAndControlsPanel.qml  PagesList.qml  StorybookUtils.qml  qmldir
storybook/pages/: AboutViewPage.qml  AccountContextMenuPage.qml  AccountSelectorPage.qml  AccountViewPage.qml  AcknowledgementsStepPage.qml  ActiveNetworkLimitPopupPage.qml  ActivityCenterPanelPage.qml  ActivityFilterMenuPage.qml  ActivityNotificationBaseEditor.qml  ActivityNotificationBaseLayout.qml  ActivityNotificationCommunityBanUnbanPage.qml  ActivityNotificationCommunityEditor.qml  ActivityNotificationCommunityInvitationPage.qml  ActivityNotificationCommunityKickedPage.qml  ActivityNotificationCommunityMembershipRequestPage.qml  ActivityNotificationCommunityRequestPage.qml  ActivityNotificationCommunityShareAddressesPage.qml  ActivityNotificationCommunityTokenReceivedPage.qml  ActivityNotificationContactEditor.qml  ActivityNotificationContactRemovedPage.qml  ActivityNotificationContactRequestPage.qml  ActivityNotificationMentionPage.qml  ActivityNotificationNewDevicePage.qml  ActivityNotificationNewKeypairFromPairedDevicePage.qml  ActivityNotificationNewsMessagePage.qml  ActivityNotificationProfileFetchingPage.qml  ActivityNotificationReplyPage.qml  ActivityNotificationTransferOwnershipPage.qml  ActivityNotificationUnknownGroupChatInvitationPage.qml  AddEditSavedAddressPopupPage.qml  AddressesInputListPage.qml  AddressesSelectorPanelPage.qml  AdvancedSettingsPage.qml  AggregatorPage.qml  AirdropRecipientsSelectorPage.qml  AirdropTokensSelectorPage.qml  AirdropsSettingsPanelPage.qml  AlertPopupPage.qml  AmountToSendNewPage.qml  AmountToSendPage.qml  (+429 more)
storybook/qmlTests/: main.cpp  tst_SessionRequestWithAuth.qml  tst_SiweLifeCycle.qml  tst_SiweRequestPlugin.qml
storybook/testData/: file_example1.mov
storybook/tests/: tst_DirectoryFilesWatcher.cpp  tst_FigmaDecoratorModel.cpp  tst_SectionsDecoratorModel.cpp
test-cpp/: CMakeLists.txt  testDeps.cpp
ui/StatusQ/: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  StatusQSources.cmake  statusq.qrc
ui/fonts/: CMakeLists.txt
ui/i18n/: CMakeLists.txt  base.qm  base.ts  qml_af.qm  qml_af.ts  qml_ar.qm  qml_ar.ts  qml_base.ts  qml_base_en.ts  qml_base_lokalise_en.ts  qml_bel.qm  qml_bel.ts  qml_bn.ts  qml_cs.qm  qml_cs.ts  qml_da.qm  qml_da.ts  qml_de.qm  qml_de.ts  qml_de_ch.qm  qml_de_ch.ts  qml_el.qm  qml_el.ts  qml_en.qm  qml_en.ts  qml_en_US.ts  qml_es.qm  qml_es.ts  qml_es_419.qm  qml_es_419.ts  qml_es_AR.ts  qml_es_ar.qm  qml_es_ar.ts  qml_es_mx.qm  qml_es_mx.ts  qml_fa.qm  qml_fa.ts  qml_fi.qm  qml_fi.ts  qml_fil.qm  (+92 more)
(+7864 files in other folders)
